[gd_scene load_steps=9 format=4 uid="uid://danm7df22wg62"]

[ext_resource type="Script" uid="uid://c1lu4wobvvjlo" path="res://levels/level_4.gd" id="1_dmnu2"]
[ext_resource type="TileSet" uid="uid://b4uyugv4eu0hb" path="res://assets/tileset.tres" id="1_s4mq8"]
[ext_resource type="PackedScene" uid="uid://kooyfrg6shdw" path="res://objects/exit.tscn" id="2_t0qhu"]
[ext_resource type="PackedScene" uid="uid://p7ee2k77t3s5" path="res://objects/door_vertical.tscn" id="3_t6q73"]
[ext_resource type="PackedScene" uid="uid://c1nfjdqmtecf8" path="res://objects/door_horizontal.tscn" id="5_sc6c1"]
[ext_resource type="PackedScene" uid="uid://crnjirv4cfucn" path="res://objects/button.tscn" id="6_ng40l"]
[ext_resource type="PackedScene" uid="uid://dymegejtj07yb" path="res://objects/box.tscn" id="7_04hp8"]
[ext_resource type="PackedScene" uid="uid://d2xo4ugj43snh" path="res://player/player.tscn" id="8_8hlpj"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_dmnu2")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//wAAAAAJAAEAAAAAAAAAAAAAAAUAAAAAAAEAAAAFAAQAAAD//wEAAAACAAUAAAD+/wEAAAAAAAQAAAD+/wAAAAAFAAUAAAD+////AAAGAAEAAAD/////AAAIAAAAAAAAAP//AAAGAAEAAAD+//7/AAADAAAAAAD///7/AAAHAAAAAAAAAP7/AAACAAAAAAD9/wAAAAADAAQAAAD9////AAAJAAEAAAD9//7/AAAEAAAAAAD8/wAAAAAAAAQAAAD8////AAAAAAEAAAD8//7/AAAAAAAAAAD+//3/AAAFAAUAAAD///3/AAAHAAIAAAAAAP3/AAAFAAEAAAD+//z/AAAHAAAAAAD///z/AAAIAAEAAAABAP//AAAGAAAAAAABAAAAAAADAAUAAAABAP7/AAADAAAAAAACAP//AAAJAAEAAAACAAAAAAAGAAEAAAACAP7/AAAJAAIAAAADAP//AAAJAAEAAAADAAAAAAAGAAAAAAADAP7/AAADAAIAAAABAP3/AAAAAAIAAAACAP3/AAADAAIAAAADAP3/AAAIAAAAAAACAPz/AAAJAAIAAAADAPz/AAAJAAAAAAABAPv/AAAGAAAAAAACAPv/AAAHAAIAAAADAPv/AAAHAAEAAAAEAP//AAAJAAIAAAAEAAAAAAAAAAUAAAAEAP7/AAAGAAIAAAAFAP//AAAFAAMAAAAFAAAAAAAFAAQAAAAFAP7/AAAFAAEAAAAEAAEAAAAFAAQAAAADAAEAAAABAAQAAAACAAEAAAABAAQAAAABAAEAAAAAAAQAAAAEAP3/AAACAAAAAAAFAP3/AAAFAAAAAAAEAPz/AAAFAAEAAAAEAPv/AAAFAAMAAAAAAPv/AAAIAAIAAAD///v/AAAHAAEAAAD+//v/AAAJAAIAAAD9//3/AAAAAAQAAAD9//z/AAAAAAEAAAD9//v/AAAAAAEAAAD9//r/AAAAAAAAAAD+//r/AAABAAAAAAD///r/AAAEAAAAAAAAAPr/AAAEAAAAAAABAPr/AAAEAAAAAAACAPr/AAAEAAAAAAADAPr/AAAEAAAAAAAEAPr/AAAFAAAAAAABAPz/AAAFAAUAAAAAAPz/AAAEAAUAAAD7//r/AAAIAAcAAADz//n/AAAIAAcAAADz//r/AAAIAAcAAADz//v/AAAIAAcAAADz//z/AAAIAAcAAADz//3/AAAIAAcAAADz//7/AAAIAAcAAADz////AAAIAAcAAADz/wAAAAAIAAcAAADz/wEAAAAIAAcAAADz/wIAAAAIAAcAAADz/wMAAAAIAAcAAADz/wQAAAAIAAcAAADz/wUAAAAIAAcAAADz/wYAAAAIAAcAAADz/wcAAAAIAAcAAAD0//n/AAAIAAcAAAD0//r/AAAIAAcAAAD0//v/AAAIAAcAAAD0//z/AAAIAAcAAAD0//3/AAAIAAcAAAD0//7/AAAIAAcAAAD0////AAAIAAcAAAD0/wAAAAAIAAcAAAD0/wEAAAAIAAcAAAD0/wIAAAAIAAcAAAD0/wMAAAAIAAcAAAD0/wQAAAAIAAcAAAD0/wUAAAAIAAcAAAD0/wYAAAAIAAcAAAD0/wcAAAAIAAcAAAD1//n/AAAIAAcAAAD1//r/AAAIAAcAAAD1//v/AAAIAAcAAAD1//z/AAAIAAcAAAD1//3/AAAIAAcAAAD1//7/AAAIAAcAAAD1////AAAIAAcAAAD1/wAAAAAIAAcAAAD1/wEAAAAIAAcAAAD1/wIAAAAIAAcAAAD1/wMAAAAIAAcAAAD1/wQAAAAIAAcAAAD1/wUAAAAIAAcAAAD1/wYAAAAIAAcAAAD1/wcAAAAIAAcAAAD2//n/AAAIAAcAAAD2//r/AAAIAAcAAAD2//v/AAAIAAcAAAD2//z/AAAIAAcAAAD2//3/AAAIAAcAAAD2//7/AAAIAAcAAAD2////AAAIAAcAAAD2/wAAAAAIAAcAAAD2/wEAAAAIAAcAAAD2/wIAAAAIAAcAAAD2/wMAAAAIAAcAAAD2/wQAAAAIAAcAAAD2/wUAAAAIAAcAAAD2/wYAAAAIAAcAAAD2/wcAAAAIAAcAAAD3//n/AAAIAAcAAAD3//r/AAAIAAcAAAD3//v/AAAIAAcAAAD3//z/AAAIAAcAAAD3//3/AAAIAAcAAAD3//7/AAAIAAcAAAD3////AAAIAAcAAAD3/wAAAAAIAAcAAAD3/wEAAAAIAAcAAAD3/wIAAAAIAAcAAAD3/wMAAAAIAAcAAAD3/wQAAAAIAAcAAAD3/wUAAAAIAAcAAAD3/wYAAAAIAAcAAAD3/wcAAAAIAAcAAAD4//n/AAAIAAcAAAD4//r/AAAIAAcAAAD4//v/AAAIAAcAAAD4//z/AAAIAAcAAAD4//3/AAAIAAcAAAD4//7/AAAIAAcAAAD4////AAAIAAcAAAD4/wAAAAAIAAcAAAD4/wEAAAAIAAcAAAD4/wIAAAAIAAcAAAD4/wMAAAAIAAcAAAD4/wQAAAAIAAcAAAD4/wUAAAAIAAcAAAD4/wYAAAAIAAcAAAD4/wcAAAAIAAcAAAD5//n/AAAIAAcAAAD5//r/AAAIAAcAAAD5//v/AAAIAAcAAAD5//z/AAAIAAcAAAD5//3/AAAIAAcAAAD5//7/AAAIAAcAAAD5////AAAIAAcAAAD5/wAAAAAIAAcAAAD5/wEAAAAIAAcAAAD5/wIAAAAIAAcAAAD5/wMAAAAIAAcAAAD5/wQAAAAIAAcAAAD5/wUAAAAIAAcAAAD5/wYAAAAIAAcAAAD5/wcAAAAIAAcAAAD6//n/AAAIAAcAAAD6//r/AAAIAAcAAAD6//v/AAAIAAcAAAD6//z/AAAIAAcAAAD6//3/AAAIAAcAAAD6//7/AAAIAAcAAAD6////AAAIAAcAAAD6/wAAAAAIAAcAAAD6/wEAAAAIAAcAAAD6/wIAAAAIAAcAAAD6/wMAAAAIAAcAAAD6/wQAAAAIAAcAAAD6/wUAAAAIAAcAAAD6/wYAAAAIAAcAAAD6/wcAAAAIAAcAAAD7//n/AAAIAAcAAAD7//v/AAAIAAcAAAD7//z/AAAIAAcAAAD7//3/AAAIAAcAAAD7//7/AAAIAAcAAAD7////AAAIAAcAAAD7/wAAAAAIAAcAAAD7/wEAAAAIAAcAAAD7/wIAAAAIAAcAAAD7/wMAAAAIAAcAAAD7/wQAAAAIAAcAAAD7/wUAAAAIAAcAAAD7/wYAAAAIAAcAAAD7/wcAAAAIAAcAAAD8/wIAAAAIAAcAAAD8/wMAAAAIAAcAAAD8/wQAAAAIAAcAAAD8/wUAAAAIAAcAAAD8/wYAAAAIAAcAAAD8/wcAAAAIAAcAAAD9/wIAAAAIAAcAAAD9/wMAAAAIAAcAAAD9/wQAAAAIAAcAAAD9/wUAAAAIAAcAAAD9/wYAAAAIAAcAAAD9/wcAAAAIAAcAAAD+/wIAAAAIAAcAAAD+/wMAAAAIAAcAAAD+/wQAAAAIAAcAAAD+/wUAAAAIAAcAAAD+/wYAAAAIAAcAAAD+/wcAAAAIAAcAAAD//wIAAAAIAAcAAAD//wMAAAAIAAcAAAD//wQAAAAIAAcAAAD//wUAAAAIAAcAAAD//wYAAAAIAAcAAAD//wcAAAAIAAcAAAAAAAIAAAAIAAcAAAAAAAMAAAAIAAcAAAAAAAQAAAAIAAcAAAAAAAUAAAAIAAcAAAAAAAYAAAAIAAcAAAAAAAcAAAAIAAcAAAABAAIAAAAIAAcAAAABAAMAAAAIAAcAAAABAAQAAAAIAAcAAAABAAUAAAAIAAcAAAABAAYAAAAIAAcAAAABAAcAAAAIAAcAAAACAAIAAAAIAAcAAAACAAMAAAAIAAcAAAACAAQAAAAIAAcAAAACAAUAAAAIAAcAAAACAAYAAAAIAAcAAAACAAcAAAAIAAcAAAADAAIAAAAIAAcAAAADAAMAAAAIAAcAAAADAAQAAAAIAAcAAAADAAUAAAAIAAcAAAADAAYAAAAIAAcAAAADAAcAAAAIAAcAAAAEAAIAAAAIAAcAAAAEAAMAAAAIAAcAAAAEAAQAAAAIAAcAAAAEAAUAAAAIAAcAAAAEAAYAAAAIAAcAAAAEAAcAAAAIAAcAAAAFAAIAAAAIAAcAAAAFAAMAAAAIAAcAAAAFAAQAAAAIAAcAAAAFAAUAAAAIAAcAAAAFAAYAAAAIAAcAAAAFAAcAAAAIAAcAAAAGAAIAAAAIAAcAAAAGAAMAAAAIAAcAAAAGAAQAAAAIAAcAAAAGAAUAAAAIAAcAAAAGAAYAAAAIAAcAAAAGAAcAAAAIAAcAAAAHAAIAAAAIAAcAAAAHAAMAAAAIAAcAAAAHAAQAAAAIAAcAAAAHAAUAAAAIAAcAAAAHAAYAAAAIAAcAAAAHAAcAAAAIAAcAAAAIAAIAAAAIAAcAAAAIAAMAAAAIAAcAAAAIAAQAAAAIAAcAAAAIAAUAAAAIAAcAAAAIAAYAAAAIAAcAAAAIAAcAAAAIAAcAAAAJAAIAAAAIAAcAAAAJAAMAAAAIAAcAAAAJAAQAAAAIAAcAAAAJAAUAAAAIAAcAAAAJAAYAAAAIAAcAAAAJAAcAAAAIAAcAAAAKAAIAAAAIAAcAAAAKAAMAAAAIAAcAAAAKAAQAAAAIAAcAAAAKAAUAAAAIAAcAAAAKAAYAAAAIAAcAAAAKAAcAAAAIAAcAAAALAAIAAAAIAAcAAAALAAMAAAAIAAcAAAALAAQAAAAIAAcAAAALAAUAAAAIAAcAAAALAAYAAAAIAAcAAAALAAcAAAAIAAcAAAAGAPn/AAAIAAcAAAAGAPr/AAAIAAcAAAAGAPv/AAAIAAcAAAAGAPz/AAAIAAcAAAAGAP3/AAAIAAcAAAAGAP7/AAAIAAcAAAAGAP//AAAIAAcAAAAGAAAAAAAIAAcAAAAGAAEAAAAIAAcAAAAHAPn/AAAIAAcAAAAHAPr/AAAIAAcAAAAHAPv/AAAIAAcAAAAHAPz/AAAIAAcAAAAHAP3/AAAIAAcAAAAHAP7/AAAIAAcAAAAHAP//AAAIAAcAAAAHAAAAAAAIAAcAAAAHAAEAAAAIAAcAAAAIAPn/AAAIAAcAAAAIAPr/AAAIAAcAAAAIAPv/AAAIAAcAAAAIAPz/AAAIAAcAAAAIAP3/AAAIAAcAAAAIAP7/AAAIAAcAAAAIAP//AAAIAAcAAAAIAAAAAAAIAAcAAAAIAAEAAAAIAAcAAAAJAPn/AAAIAAcAAAAJAPr/AAAIAAcAAAAJAPv/AAAIAAcAAAAJAPz/AAAIAAcAAAAJAP3/AAAIAAcAAAAJAP7/AAAIAAcAAAAJAP//AAAIAAcAAAAJAAAAAAAIAAcAAAAJAAEAAAAIAAcAAAAKAPn/AAAIAAcAAAAKAPr/AAAIAAcAAAAKAPv/AAAIAAcAAAAKAPz/AAAIAAcAAAAKAP3/AAAIAAcAAAAKAP7/AAAIAAcAAAAKAP//AAAIAAcAAAAKAAAAAAAIAAcAAAAKAAEAAAAIAAcAAAALAPn/AAAIAAcAAAALAPr/AAAIAAcAAAALAPv/AAAIAAcAAAALAPz/AAAIAAcAAAALAP3/AAAIAAcAAAALAP7/AAAIAAcAAAALAP//AAAIAAcAAAALAAAAAAAIAAcAAAALAAEAAAAIAAcAAAD8//n/AAAIAAcAAAD9//n/AAAIAAcAAAD+//n/AAAIAAcAAAD///n/AAAIAAcAAAAAAPn/AAAIAAcAAAABAPn/AAAIAAcAAAACAPn/AAAIAAcAAAADAPn/AAAIAAcAAAAEAPn/AAAIAAcAAAAFAPn/AAAIAAcAAAD8//r/AAAIAAcAAAD8//v/AAAIAAcAAAD8//z/AAAIAAcAAAD8//3/AAAIAAcAAAD8/wEAAAAIAAcAAAD9/wEAAAAIAAcAAAAFAAEAAAAIAAcAAAAFAPr/AAAIAAcAAAAFAPv/AAAIAAcAAAAFAPz/AAAIAAcAAADx//n/AAAIAAcAAADx//r/AAAIAAcAAADx//v/AAAIAAcAAADx//z/AAAIAAcAAADx//3/AAAIAAcAAADx//7/AAAIAAcAAADx////AAAIAAcAAADx/wAAAAAIAAcAAADx/wEAAAAIAAcAAADx/wIAAAAIAAcAAADx/wMAAAAIAAcAAADx/wQAAAAIAAcAAADx/wUAAAAIAAcAAADx/wYAAAAIAAcAAADx/wcAAAAIAAcAAADy//n/AAAIAAcAAADy//r/AAAIAAcAAADy//v/AAAIAAcAAADy//z/AAAIAAcAAADy//3/AAAIAAcAAADy//7/AAAIAAcAAADy////AAAIAAcAAADy/wAAAAAIAAcAAADy/wEAAAAIAAcAAADy/wIAAAAIAAcAAADy/wMAAAAIAAcAAADy/wQAAAAIAAcAAADy/wUAAAAIAAcAAADy/wYAAAAIAAcAAADy/wcAAAAIAAcAAAAMAPn/AAAIAAcAAAAMAPr/AAAIAAcAAAAMAPv/AAAIAAcAAAAMAPz/AAAIAAcAAAAMAP3/AAAIAAcAAAAMAP7/AAAIAAcAAAAMAP//AAAIAAcAAAAMAAAAAAAIAAcAAAAMAAEAAAAIAAcAAAAMAAIAAAAIAAcAAAAMAAMAAAAIAAcAAAAMAAQAAAAIAAcAAAAMAAUAAAAIAAcAAAAMAAYAAAAIAAcAAAAMAAcAAAAIAAcAAAANAPn/AAAIAAcAAAANAPr/AAAIAAcAAAANAPv/AAAIAAcAAAANAPz/AAAIAAcAAAANAP3/AAAIAAcAAAANAP7/AAAIAAcAAAANAP//AAAIAAcAAAANAAAAAAAIAAcAAAANAAEAAAAIAAcAAAANAAIAAAAIAAcAAAANAAMAAAAIAAcAAAANAAQAAAAIAAcAAAANAAUAAAAIAAcAAAANAAYAAAAIAAcAAAANAAcAAAAIAAcAAAAOAPn/AAAIAAcAAAAOAPr/AAAIAAcAAAAOAPv/AAAIAAcAAAAOAPz/AAAIAAcAAAAOAP3/AAAIAAcAAAAOAP7/AAAIAAcAAAAOAP//AAAIAAcAAAAOAAAAAAAIAAcAAAAOAAEAAAAIAAcAAAAOAAIAAAAIAAcAAAAOAAMAAAAIAAcAAAAOAAQAAAAIAAcAAAAOAAUAAAAIAAcAAAAOAAYAAAAIAAcAAAAOAAcAAAAIAAcAAAAPAPn/AAAIAAcAAAAPAPr/AAAIAAcAAAAPAPv/AAAIAAcAAAAPAPz/AAAIAAcAAAAPAP3/AAAIAAcAAAAPAP7/AAAIAAcAAAAPAP//AAAIAAcAAAAPAAAAAAAIAAcAAAAPAAEAAAAIAAcAAAAPAAIAAAAIAAcAAAAPAAMAAAAIAAcAAAAPAAQAAAAIAAcAAAAPAAUAAAAIAAcAAAAPAAYAAAAIAAcAAAAPAAcAAAAIAAcAAAAQAPn/AAAIAAcAAAAQAPr/AAAIAAcAAAAQAPv/AAAIAAcAAAAQAPz/AAAIAAcAAAAQAP3/AAAIAAcAAAAQAP7/AAAIAAcAAAAQAP//AAAIAAcAAAAQAAAAAAAIAAcAAAAQAAEAAAAIAAcAAAAQAAIAAAAIAAcAAAAQAAMAAAAIAAcAAAAQAAQAAAAIAAcAAAAQAAUAAAAIAAcAAAAQAAYAAAAIAAcAAAAQAAcAAAAIAAcAAADx//T/AAAIAAcAAADx//X/AAAIAAcAAADx//b/AAAIAAcAAADx//f/AAAIAAcAAADx//j/AAAIAAcAAADy//T/AAAIAAcAAADy//X/AAAIAAcAAADy//b/AAAIAAcAAADy//f/AAAIAAcAAADy//j/AAAIAAcAAADz//T/AAAIAAcAAADz//X/AAAIAAcAAADz//b/AAAIAAcAAADz//f/AAAIAAcAAADz//j/AAAIAAcAAAD0//T/AAAIAAcAAAD0//X/AAAIAAcAAAD0//b/AAAIAAcAAAD0//f/AAAIAAcAAAD0//j/AAAIAAcAAAD1//T/AAAIAAcAAAD1//X/AAAIAAcAAAD1//b/AAAIAAcAAAD1//f/AAAIAAcAAAD1//j/AAAIAAcAAAD2//T/AAAIAAcAAAD2//X/AAAIAAcAAAD2//b/AAAIAAcAAAD2//f/AAAIAAcAAAD2//j/AAAIAAcAAAD3//T/AAAIAAcAAAD3//X/AAAIAAcAAAD3//b/AAAIAAcAAAD3//f/AAAIAAcAAAD3//j/AAAIAAcAAAD4//T/AAAIAAcAAAD4//X/AAAIAAcAAAD4//b/AAAIAAcAAAD4//f/AAAIAAcAAAD4//j/AAAIAAcAAAD5//T/AAAIAAcAAAD5//X/AAAIAAcAAAD5//b/AAAIAAcAAAD5//f/AAAIAAcAAAD5//j/AAAIAAcAAAD6//T/AAAIAAcAAAD6//X/AAAIAAcAAAD6//b/AAAIAAcAAAD6//f/AAAIAAcAAAD6//j/AAAIAAcAAAD7//T/AAAIAAcAAAD7//X/AAAIAAcAAAD7//b/AAAIAAcAAAD7//f/AAAIAAcAAAD7//j/AAAIAAcAAAD8//T/AAAIAAcAAAD8//X/AAAIAAcAAAD8//b/AAAIAAcAAAD8//f/AAAIAAcAAAD8//j/AAAIAAcAAAD9//T/AAAIAAcAAAD9//X/AAAIAAcAAAD9//b/AAAIAAcAAAD9//f/AAAIAAcAAAD9//j/AAAIAAcAAAD+//T/AAAIAAcAAAD+//X/AAAIAAcAAAD+//b/AAAIAAcAAAD+//f/AAAIAAcAAAD+//j/AAAIAAcAAAD///T/AAAIAAcAAAD///X/AAAIAAcAAAD///b/AAAIAAcAAAD///f/AAAIAAcAAAD///j/AAAIAAcAAAAAAPT/AAAIAAcAAAAAAPX/AAAIAAcAAAAAAPb/AAAIAAcAAAAAAPf/AAAIAAcAAAAAAPj/AAAIAAcAAAABAPT/AAAIAAcAAAABAPX/AAAIAAcAAAABAPb/AAAIAAcAAAABAPf/AAAIAAcAAAABAPj/AAAIAAcAAAACAPT/AAAIAAcAAAACAPX/AAAIAAcAAAACAPb/AAAIAAcAAAACAPf/AAAIAAcAAAACAPj/AAAIAAcAAAADAPT/AAAIAAcAAAADAPX/AAAIAAcAAAADAPb/AAAIAAcAAAADAPf/AAAIAAcAAAADAPj/AAAIAAcAAAAEAPT/AAAIAAcAAAAEAPX/AAAIAAcAAAAEAPb/AAAIAAcAAAAEAPf/AAAIAAcAAAAEAPj/AAAIAAcAAAAFAPT/AAAIAAcAAAAFAPX/AAAIAAcAAAAFAPb/AAAIAAcAAAAFAPf/AAAIAAcAAAAFAPj/AAAIAAcAAAAGAPT/AAAIAAcAAAAGAPX/AAAIAAcAAAAGAPb/AAAIAAcAAAAGAPf/AAAIAAcAAAAGAPj/AAAIAAcAAAAHAPT/AAAIAAcAAAAHAPX/AAAIAAcAAAAHAPb/AAAIAAcAAAAHAPf/AAAIAAcAAAAHAPj/AAAIAAcAAAAIAPT/AAAIAAcAAAAIAPX/AAAIAAcAAAAIAPb/AAAIAAcAAAAIAPf/AAAIAAcAAAAIAPj/AAAIAAcAAAAJAPT/AAAIAAcAAAAJAPX/AAAIAAcAAAAJAPb/AAAIAAcAAAAJAPf/AAAIAAcAAAAJAPj/AAAIAAcAAAAKAPT/AAAIAAcAAAAKAPX/AAAIAAcAAAAKAPb/AAAIAAcAAAAKAPf/AAAIAAcAAAAKAPj/AAAIAAcAAAALAPT/AAAIAAcAAAALAPX/AAAIAAcAAAALAPb/AAAIAAcAAAALAPf/AAAIAAcAAAALAPj/AAAIAAcAAAAMAPT/AAAIAAcAAAAMAPX/AAAIAAcAAAAMAPb/AAAIAAcAAAAMAPf/AAAIAAcAAAAMAPj/AAAIAAcAAAANAPT/AAAIAAcAAAANAPX/AAAIAAcAAAANAPb/AAAIAAcAAAANAPf/AAAIAAcAAAANAPj/AAAIAAcAAAAOAPT/AAAIAAcAAAAOAPX/AAAIAAcAAAAOAPb/AAAIAAcAAAAOAPf/AAAIAAcAAAAOAPj/AAAIAAcAAAAPAPT/AAAIAAcAAAAPAPX/AAAIAAcAAAAPAPb/AAAIAAcAAAAPAPf/AAAIAAcAAAAPAPj/AAAIAAcAAAAQAPT/AAAIAAcAAAAQAPX/AAAIAAcAAAAQAPb/AAAIAAcAAAAQAPf/AAAIAAcAAAAQAPj/AAAIAAcAAAA=")
tile_set = ExtResource("1_s4mq8")

[node name="Exit" parent="." instance=ExtResource("2_t0qhu")]
position = Vector2(-40, -8)

[node name="DoorVertical" parent="." instance=ExtResource("3_t6q73")]
position = Vector2(-24, -8)

[node name="DoorHorizontal" parent="." instance=ExtResource("5_sc6c1")]
position = Vector2(-8, -24)

[node name="Button2" parent="." instance=ExtResource("6_ng40l")]
position = Vector2(56, -72)

[node name="Button" parent="." instance=ExtResource("6_ng40l")]
position = Vector2(40, -24)

[node name="Box" parent="." instance=ExtResource("7_04hp8")]
position = Vector2(-8, -40)

[node name="Box2" parent="." instance=ExtResource("7_04hp8")]
position = Vector2(56, -8)

[node name="Player" parent="." instance=ExtResource("8_8hlpj")]
position = Vector2(-8, 8)

[connection signal="button_just_pressed" from="Button2" to="." method="_on_button_2_button_just_pressed"]
[connection signal="button_just_released" from="Button2" to="." method="_on_button_2_button_just_released"]
[connection signal="button_just_pressed" from="Button" to="." method="_on_button_button_just_pressed"]
[connection signal="button_just_released" from="Button" to="." method="_on_button_button_just_released"]
